--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+@font-face {
+  font-family: "MyFont";
+  src: url("/ARCADECLASSIC.TTF") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
