--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -5,3 +5,17 @@
   font-weight: normal;
   font-style: normal;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+    .pixel-outline {
+    text-shadow:
+      -1px 0 0 #000,
+      1px 0 0 #000,
+      0 -1px 0 #000,
+      0 1px 0 #000,
+      -5px 4px 0 #000;
+  }
+}
